# tzj_lame

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/lame_3.100/: id3tag.h  tables.h
app/src/main/cpp/lame_3.100/vector/: lame_intrin.h
app/src/main/java/com/tzj/lame/: MainActivity.java
app/src/main/res/values/: strings.xml
